--- a/woofai-presale/index.html
+++ b/woofai-presale/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>WoofAi Presale</title>
+    <style>
+
+/* Optional for smooth scroll */
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color: #000;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+    </style>
   </head>
   <body>
     <div id="root"></div>
