Update: Replaced logo with cleaned transparent version and updated landing page

--- a/woofai-presale/index.html
+++ b/woofai-presale/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/woofai-token/Woofai-metadata/main/Logo.png
+    " />
     <title>WoofAi Presale</title>
     <style>
 
